# fedload

./: .cursorignore  .gitignore  CHANGELOG.md  DEVELOP.md  DOCKER.md  Dockerfile  FED4oSession.txt  FEDA1.txt  FEDR1.txt  GITHUB_ACTIONS.md  INSTRUCTIONS.md  README.md  TODO.md  __init__.py  config.json  config_log.py  config_manager.py  daily_report.html  diff.py  docker-compose.yml  entity_store.json  fed_entities.json  fed_entity_recognizer.py  fed_terms.json  fetcher.py  hasher.py  main.py  netlify.toml  prepare-commit.sh  pyproject.toml  requirements.txt  scheduler.py  setup.py  tracked_sites.json  weekly_summary.html  windsurf_deployment.yaml
.cursor/rules/: fedload-rules.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml  dependabot.yml  release.yml
SAVE/fed_monitor/: main.py
SAVE/fed_site_monitor/: README.md  fetcher.py  main.py  requirements.txt  scheduler.py  tracked_sites_full.json
SAVE/fed_site_monitor_complete/: daily_report.html  diff.py  fetcher.py  hasher.py  main.py  requirements.txt  scheduler.py
SAVE/fed_site_monitor_final/fed_site_monitor/: README.md  change_log.json  hasher.py  main.py  scheduler.py
SAVE/fed_site_monitor_full_export/: hasher.py
SAVE/fedload/: .gitignore  CHANGELOG.md  DEPLOY.md  PERSISTENCE.md  PHASES.md  fedload_config.yml  main.py  utils.py
SAVE/fedload/.github/workflows/: python-ci.yml
SAVE/fedload/admin/: Dockerfile  Makefile  fedload.ipynb  fedload_metrics.ipynb  git_push.sh  setup_env.sh
SAVE/fedload/load/: frbsf_load.py
SAVE/fedload/tests/: test_config.py
doc/: FEDL.txt  deployment_scenarios.md  github_workflow.md  project_rules.md  python_venv_guide.md
doc/Design/: architecture.md  development.md  github_workflow.md  release_deployment.md  test_plan.md
doc/Require/: MRD.md  PRD.md  requirements.md
fedload0/: FEDR1.txt  README.md  daily_report.html  requirements.txt
fedload0/tests/: test_core.py
tests/: test_config.py  test_entities.json  test_entity.py  test_logging.py  test_main.py  test_utils.py
